增加新的示例

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     ::-webkit-scrollbar-thumb{background-color: rgba(120, 120, 120, 0.2);border: 1px solid rgba(120, 120, 120, 0.2);}
     ::-webkit-scrollbar-corner{background-color: transparent;}
     *{scrollbar-color: rgba(120, 120, 120, 0.3) transparent;scrollbar-width: thin;}
+    .btn-group>button{margin-left: -1px;}
   </style>
 </head>
 <body class="bg c-8 fs-0.9 fc oh trans-bg dur-200">
@@ -75,7 +76,7 @@
           <div class="px-4 py-1 r-10 bd bc-red-2 c-red ml-5">呢！</div>
         </div>
         <div class="p-10">
-          <div class="ifr">
+          <div class="ifr btn-group">
             <button class="p-2 px-5 bd ring-blue bc-2 h:bg-1 rtl-3 rbl-3">This</button>
             <button class="p-2 px-5 bd ring-blue bc-2 h:bg-1">is</button>
             <button class="p-2 px-5 bd ring-blue bc-blue bg-blue-1 c-blue z-1">Button</button>
@@ -168,8 +169,8 @@
       <div class="p-3">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</div>
       <div class="fr ac mt-2">
         <div class="f-1"></div>
-        <button class="px-5 py-3 r-3 ml-2 trans-bg h:bg-2 a:bg-4 f:bg-1 ring-blue">DISAGREE</button>
-        <button class="px-5 py-3 r-3 ml-2 c-blue trans-bg b h:bg-blue-2 a:bg-blue-4 f:bg-blue-1 ring-blue" id="agree-btn">AGREE</button>
+        <button class="px-5 py-4 lh-1 r-3 ml-2 trans-bg h:bg-2 a:bg-4 f:bg-1 ring-blue">DISAGREE</button>
+        <button class="px-5 py-4 lh-1 r-3 ml-2 c-blue trans-bg b h:bg-blue-2 a:bg-blue-4 f:bg-blue-1 ring-blue" id="agree-btn">AGREE</button>
       </div>
     </div>
   </div>
