更改grid系列类名

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
           <p>这里是正文</p>
         </div>
   
-        <div class="gfr gtc-4 gap-10 p-10 as">
-          <div class="r-3 bg-blue-6 p-10 sm:gc-4 md:gc-2"></div>
-          <div class="r-3 bg-blue-6 p-10 sm:gc-4 md:gc-2 md:gcs-3 sm:grs-2 sm:gcs-1"></div>
-          <div class="r-3 bg-blue-6 p-10 xxs:gc-4"></div>
-          <div class="r-3 bg-blue-6 p-10 xxs:gc-4"></div>
-          <div class="r-3 bg-blue-6 p-10 xxs:gc-4"></div>
-          <div class="r-3 bg-blue-6 p-10 xxs:gc-4"></div>
-          <div class="r-3 bg-blue-6 p-10 xxs:gc-4"></div>
-          <div class="r-3 bg-blue-6 p-10 xxs:gc-4"></div>
+        <div class="row cols-4 gap-10 p-10 as">
+          <div class="r-3 bg-blue-6 p-10 sm:col-4 md:col-2"></div>
+          <div class="r-3 bg-blue-6 p-10 sm:col-4 md:col-2 md:cs-3 sm:rs-2 sm:cs-1"></div>
+          <div class="r-3 bg-blue-6 p-10 xxs:col-4"></div>
+          <div class="r-3 bg-blue-6 p-10 xxs:col-4"></div>
+          <div class="r-3 bg-blue-6 p-10 xxs:col-4"></div>
+          <div class="r-3 bg-blue-6 p-10 xxs:col-4"></div>
+          <div class="r-3 bg-blue-6 p-10 xxs:col-4"></div>
+          <div class="r-3 bg-blue-6 p-10 xxs:col-4"></div>
         </div>
         <div class="fr p-10">
           <div class="p-20 f-1 md:f-3 bg-gray-1"></div>
@@ -64,7 +64,7 @@
           <button class="m-5 px-5 py-3 r-3 h:bg-1 a:bg-2 bd bc-2">Button</button>
           <button class="m-5 px-5 py-3 r-3 h:bg-blue bg-blue-8 c-white a:bg-blue-8 ring-blue trans">Button</button>
           <button class="m-5 px-5 py-3 r-3 bd bc-red-2 h:bg-red-2 bg-red-1 c-red a:bg-red-4 trans ring-red" id="dialog-btn">Dialog</button>
-          <a class="m-5 toe h:c-blue h:u trans-c" href="#">链接</a>
+          <a class="m-5 toe h:c-blue h:u trans-c" href="./example.html">Example page</a>
         </div>
         <div>
           <input type="checkbox">
@@ -111,13 +111,13 @@
   var b = 0;
   console.log(a + b);</pre>
         </div>
-        <!-- <div class="gfr gtc-4 gr-3 gap-10 m-10" style="height:300px;">
+        <!-- <div class="row cols-4 row-3 gap-10 m-10" style="height:300px;">
           <div class="bg-blue-6 c-white ct">网格布局</div>
-          <div class="bg-yellow-6 c-white gc-1 grs-2"></div>
-          <div class="bg-g-6 c-white gc-2 gr-2"></div>
-          <div class="bg-blue-6 c-white gc-1 gr-2"></div>
-          <div class="bg-yellow-6 c-white gc-2 gr-1"></div>
-          <div class="bg-red-6 c-white gc-2 gr-1"></div>
+          <div class="bg-yellow-6 c-white col-1 rs-2"></div>
+          <div class="bg-g-6 c-white col-2 row-2"></div>
+          <div class="bg-blue-6 c-white col-1 row-2"></div>
+          <div class="bg-yellow-6 c-white col-2 row-1"></div>
+          <div class="bg-red-6 c-white col-2 row-1"></div>
         </div> -->
 
         <div class="r-3 shadow-1 m-10 pr" style="max-width:360px;">
