增加了purge命令

--- a/example.html
+++ b/example.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    html{width: 100%;height: 100%;font-size: 14px;}
+    ::-webkit-scrollbar{width: 10px;height: 10px;}
+    ::-webkit-scrollbar-thumb{background-color: rgba(120, 120, 120, 0.2);border: 1px solid rgba(120, 120, 120, 0.2);}
+    ::-webkit-scrollbar-corner{background-color: transparent;}
+    *{scrollbar-color: rgba(120, 120, 120, 0.3) transparent;scrollbar-width: thin;}
+    .avatar{width: 2em;height: 2em;}
+    .left{width: 340px;}
+  </style>
   <link rel="stylesheet" href="./dist/layout.css">
   <!-- <link rel="stylesheet" href="./dist/ie.css"> -->
   <link rel="stylesheet" href="./dist/light.css" id="style">
@@ -11,19 +20,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> -->
 
   <title>origin.css</title>
-  <style>
-    html{width: 100%;height: 100%;font-size: 14px;}
-    ::-webkit-scrollbar{width: 10px;height: 10px;}
-    ::-webkit-scrollbar-thumb{background-color: rgba(120, 120, 120, 0.2);border: 1px solid rgba(120, 120, 120, 0.2);}
-    ::-webkit-scrollbar-corner{background-color: transparent;}
-    *{scrollbar-color: rgba(120, 120, 120, 0.3) transparent;scrollbar-width: thin;}
-    .avatar{width: 2em;height: 2em;}
-  </style>
 </head>
 <body class="wf hf fr bg c-8 trans-bg dur-200 md:fc">
   <!-- left -->
-  <div class="fc br bc-1" style="width: 320px;">
-    <div class="p-7 fr ac">
+  <div class="ps left fc br bc-1 bg md:fr md:br-0 md:wf md:ac trans-bg dur-200" style="left:0;top: 0;">
+    <div class="p-7 fr ac md:py-5">
       <span class="f-1 fs-1.4 b">Example</span>
     </div>
     <div class="f-1"></div>
@@ -36,7 +37,7 @@
     <h1 class="b">Dashboard</h1>
     <div class="row cols-3 gap-15 sm:gap-5 mt-10 bd bc-1 r-3 p-6">
       <div class="col-2 fr sm:col-3 xxs:fc">
-        <div class="f-1 xxs:f-0 fc as xxs:fr xxs:ac xxs:mb-5">
+        <div class="fc as mr-10 xxs:fr xxs:ac xxs:mb-5 xxs:mr-0">
           <div class="fs-0.9 b c-6 xxs:mr-4">MRR</div>
           <div class="fr as xxs:ac lh-1 b mt-3 xxs:mt-0 xxs:mr-4">
             <span class="mr-1 fs-1.5">$</span>
