--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 <body class="bg c-8 fs-0.9 fc oh trans-bg dur-200">
   <!-- <h1 tabindex="1" class="m-10 bc-1 c-5 bd h:bg-1 a:c-9 f:bc-4">测试文字</h1> -->
   <div class="ps wf bb bc-1 z-2" style="left:0;top:0;">
-    <div class="ma wf px-10 fr hf ac" style="max-width:1200px;height: 60px;">
+    <div class="mx-a wf px-10 fr hf ac" style="max-width:1200px;height: 60px;">
       <h1 class="f-1">ORIGIN.CSS</h1>
       <button id="switch" class="p-3 px-5 bd r-3 h:bg-2 ring-blue">切换暗色模式</button>
     </div>
   </div>
   <div class="f1 os">
-    <div class="main fr ma" style="max-width:1200px;">
+    <div class="main fr mx-a" style="max-width:1200px;">
       <div class="pr f-1 p-30">
         <!-- <div class="r-3" style="width:1.2em;height:1.2em;background-color: currentColor;"></div> -->
         <div class="p-10">
