--- a/example.html
+++ b/example.html
@@ -158,15 +158,15 @@
           <h2 class="px-6 py-5 b fs-1.2 bb bc-1">Start creating content</h2>
           <div class="row cols-2 xs:cols-1 p-7 gap-6">
             <div class="fr as">
-              <div class="bg-blue-9 ct p-4 r-3 c-white mr-5">ab</div>
-              <div class="f-1">
+              <div class="icon bg-green-9 ct p-3 r-3 c-white fs-1.4">people</div>
+              <div class="f-1 ml-5">
                 <h3 class="b fs-1">Create your first member</h3>
                 <div class="c-6 mt-2">Add youself or import members from CSV</div>
               </div>
             </div>
             <div class="fr as">
-              <div class="bg-yellow ct p-4 r-3 c-white mr-5">ab</div>
-              <div class="f-1">
+              <div class="icon bg-yellow-9 ct p-3 r-3 c-white fs-1.4">edit</div>
+              <div class="f-1 ml-5">
                 <h3 class="b fs-1">Publish a post</h3>
                 <div class="c-6 mt-2">Get familliar width the Ghost editor and start creating</div>
               </div>
