--- a/example.html
+++ b/example.html
@@ -46,7 +46,7 @@
         <div class="p-2 pl-4 fr ac r-3 h:c-blue a mt-8">
           <i class="icon fs-1.2 o-8">edit</i>
           <span class="f-1 ml-4">Posts</span>
-          <button class="icon fs-1.2 p-1 r-2 ring-blue h:c-blue">add</button>
+          <button class="icon fs-1.2 p-1 r-2 ring-blue h:c-blue h:bg-blue-1 a:bg-blue-2">add</button>
         </div>
         <div class="p-3 px-4 fr ac r-3 h:c-blue a pl-14">
           <span class="f-1">Drafts</span>
@@ -188,7 +188,10 @@
             <h2 class="b fs-1.2">Looking for the help of ghost features?</h2>
             <p class="mt-2 c-6 lh-1.4">Stand out from the crowd. ghost lets you customize everything so you can create a publication that doesn't just look the same as what everyone else has.</p>
             <div class="fr wrap mt-2">
-              <a href="#" class="bd bc-2 p-2 px-3 r-3 mr-2 mt-2 h:c-blue h:bc-blue-4 h:bg-blue-1 ring-blue">Visite the help center</a>
+              <a href="#" class="ifr ac bd bc-2 p-2 px-3 r-3 mr-2 mt-2 h:c-blue h:bc-blue-4 h:bg-blue-1 ring-blue">
+                <span class="mr-2">Visite the help center</span>
+                <i class="icon fs-1.2 o-6">east</i>
+              </a>
             </div>
           </div>
         </div>
