--- a/example.html
+++ b/example.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html{width: 100%;height: 100%;font-size: 14px;}
-    ::-webkit-scrollbar{width: 10px;height: 10px;}
-    ::-webkit-scrollbar-thumb{background-color: rgba(120, 120, 120, 0.2);border: 1px solid rgba(120, 120, 120, 0.2);}
+    ::-webkit-scrollbar{width: 8px;height: 8px;}
+    ::-webkit-scrollbar-thumb{background-color: rgba(120, 120, 120, 0.3);}
     ::-webkit-scrollbar-corner{background-color: transparent;}
     *{scrollbar-color: rgba(120, 120, 120, 0.3) transparent;scrollbar-width: thin;}
     .avatar{width: 2em;height: 2em;}
@@ -32,8 +32,8 @@
       <span class="f-1 b lh-1 fs-1.4">Example</span>
       <button class="icon fs-1.5 h:bg-blue-1 p-2 r-3 ring-blue h:c-blue">search</button>
     </div>
-    <div class="f-1 fc md:dn lh-1">
-      <div class="f-1 osy p-5 b c-7">
+    <div class="f-1 oh fc md:dn lh-1">
+      <div class="f-1 osy p-5 b c-7 mr-1">
         <div class="p-3 px-4 fr ac r-3 bg-blue-1 c-blue">
           <i class="icon fs-1.2">cottage</i>
           <span class="f-1 b ml-4">Dashboard</span>
@@ -111,7 +111,10 @@
   </div>
   <!-- right -->
   <div class="f-1 osy p-10 xxs:p-4">
-    <h1 class="b">Dashboard</h1>
+    <h1 class="b fr ac">
+      <i class="icon mr-3 c-7">cottage</i>
+      <span>Dashboard</span>
+    </h1>
     <div class="row cols-3 gap-15 sm:gap-5 mt-10 bd bc-1 r-3 p-6">
       <div class="col-2 fr sm:col-3 xxs:fc">
         <div class="fc as mr-10 xxs:fr xxs:ac xxs:mb-5 xxs:mr-0">
