--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     .btn-group>button{margin-left: -1px;}
   </style>
 </head>
-<body class="bg c-8 fs-0.9 fc oh trans-bg dur-200">
+<body class="bg c-8 fs-0.9 fc oh trans-bg">
   <!-- <h1 tabindex="1" class="m-10 bc-1 c-5 bd h:bg-1 a:c-9 f:bc-4">测试文字</h1> -->
   <div class="ps wf bb bc-1 z-2" style="left:0;top:0;">
     <div class="mx-a wf px-10 fr hf ac" style="max-width:1200px;height: 60px;">
@@ -140,15 +140,15 @@
 
         <div class="m-10 mt-30">
           <table class="wf">
-            <tr class="h:bg-blue-1 trans-bg dur-200">
-              <th class="p-3 by bc-1">表格</th>
-              <th class="p-3 by bc-1">Hello</th>
-              <th class="p-3 by bc-1">Hello</th>
+            <tr class="h:bg-blue-1 trans-bg by bc-1">
+              <th class="p-3">表格</th>
+              <th class="p-3">Hello</th>
+              <th class="p-3">Hello</th>
             </tr>
-            <tr class="h:bg-blue-1 trans-bg dur-200">
-              <td class="p-3 by bc-1">Hello</td>
-              <td class="p-3 by bc-1">Hello</td>
-              <td class="p-3 by bc-1">Hello</td>
+            <tr class="h:bg-blue-1 trans-bg by bc-1">
+              <td class="p-3">Hello</td>
+              <td class="p-3">Hello</td>
+              <td class="p-3">Hello</td>
             </tr>
           </table>
         </div>
