--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </head>
 <body class="bg c-8 fs-0.9 fc oh trans-bg">
   <!-- <h1 tabindex="1" class="m-10 bc-1 c-5 bd h:bg-1 a:c-9 f:bc-4">测试文字</h1> -->
-  <div class="ps wf bb bc-1 z-2" style="left:0;top:0;">
-    <div class="mx-a wf px-10 fr hf ac" style="max-width:1200px;height: 60px;">
+  <div class="ps w-full bb bc-1 z-2" style="left:0;top:0;">
+    <div class="mx-a w-full px-10 fr h-full ac" style="max-width:1200px;height: 60px;">
       <h1 class="f-1">ORIGIN.CSS</h1>
       <button id="switch" class="p-3 px-5 bd r-3 h:bg-2 ring-blue">切换暗色模式</button>
     </div>
@@ -134,7 +134,7 @@
             <button class="p-4 r-3 h:bg-1 a:bg-2 f:bg-1 a lh-1">LINK</button>
             <button class="p-4 r-3 h:bg-1 a:bg-2 f:bg-1 a lh-1">SHARE</button>
           </div>
-          <div class="pa fu lf-0 tp-0 bd bc-white-1 r-3 pen"></div>
+          <div class="pa full lf-0 tp-0 bd bc-white-1 r-3 pen"></div>
         </div>
 
 
@@ -162,8 +162,8 @@
       </div>
     </div>
   </div>
-  <div class="pf fu z-2 ct vh" id="dialog" style="left: 0;top: 0;">
-    <div class="pa fu bg-black-7" id="dialog-mask"></div>
+  <div class="pf full z-2 ct vh" id="dialog" style="left: 0;top: 0;">
+    <div class="pa full bg-black-7" id="dialog-mask"></div>
     <div class="pr p-4 bg r-8 shadow-5 bd bc-white-1" style="max-width: 280px;">
       <div class="fs-1.2 b p-3">Use Google's location service?</div>
       <div class="p-3">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</div>
