--- a/example.html
+++ b/example.html
@@ -23,7 +23,7 @@
 <body class="w-full h-full fr bg c-80 trans-bg lg:fc">
   <!-- left -->
   <div class="ps left usn fc br bc-10 bg lg:fr lg:br-0 lg:w-full lg:ac trans-bg" style="left:0;top: 0;">
-    <div class="px-14 py-12 fr ac lg:py-5 lg:wf">
+    <div class="px-14 py-12 fr ac lg:py-5 lg:w-full">
       <i class="icon notranslate mr-2 fs-2">trip_origin</i>
       <span class="f-1 b lh-1 fs-1.4">Example</span>
       <button class="icon notranslate fs-1.5 h:bg-blue-10 p-4 radius-3 ring-blue h:c-blue">search</button>
