--- a/example.html
+++ b/example.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html class="w-full h-full" style="font-size:14px;">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    html{width: 100%;height: 100%;font-size: 14px;}
     ::-webkit-scrollbar{width: 8px;height: 8px;}
     ::-webkit-scrollbar-thumb{background-color: rgba(120, 120, 120, 0.3);}
     ::-webkit-scrollbar-corner{background-color: transparent;}
