增加 ring 大小控制

--- a/example.html
+++ b/example.html
@@ -11,9 +11,9 @@
     @font-face{font-family: 'material icons outlined';src: url(./assets/material-icon-outlined.woff2);}
     .icon{font-family: 'material icons outlined';font-style: normal;font-size: inherit;line-height: 1;}
   </style>
-  <link rel="stylesheet" href="./dist/layout.css">
-  <link rel="stylesheet" href="./dist/light.css" id="style">
-  <link rel="stylesheet" href="./dist/color.css">
+  <link rel="stylesheet" href="./css/layout.css">
+  <link rel="stylesheet" href="./css/light.css" id="style">
+  <link rel="stylesheet" href="./css/color.css">
 
   <title>origin.css</title>
 </head>
@@ -26,68 +26,68 @@
       <button class="icon notranslate fs-1.5 h:bg-blue-10 p-4 radius-3 ring-blue h:c-blue">search</button>
     </div>
     <div class="f-1 oh fc md:dn lh-1">
-      <div class="f-1 osy p-10 b c-60 mr-1">
-        <div class="p-6 px-8 fr ac radius-3 bg-blue-8 c-blue">
+      <div class="f-1 osy p-10 c-60 mr-1">
+        <div class="h-24 pr-8 px-8 fr ac radius-3 bg-blue-8 c-blue">
           <i class="icon notranslate fs-1.2">cottage</i>
           <span class="f-1 b ml-8">Dashboard</span>
         </div>
-        <div class="p-6 px-8 fr ac radius-3 h:bg-5 a:bg-10 a">
-          <i class="icon notranslate fs-1.2 o-80">devices</i>
-          <span class="f-1 ml-8">View Site</span>
+        <div class="h-24 pr-8 px-8 fr ac radius-3 h:bg-5 a:bg-10 a">
+          <i class="icon notranslate fs-1.2">devices</i>
+          <span class="f-1 b ml-8">View Site</span>
         </div>
 
-        <div class="p-4 pl-8 fr ac radius-3 h:bg-5 a:bg-10 a mt-12">
-          <i class="icon notranslate fs-1.2 o-80">edit</i>
-          <span class="f-1 ml-8">Posts</span>
+        <div class="h-24 pr-8 pl-8 fr ac radius-3 h:bg-5 a:bg-10 a mt-12">
+          <i class="icon notranslate fs-1.2">edit</i>
+          <span class="f-1 b ml-8">Posts</span>
           <button class="icon notranslate fs-1.2 p-1 radius-2 ring-blue h:c-blue h:bg-blue-10 a:bg-blue-10">add</button>
         </div>
-        <div class="p-6 px-8 fr ac radius-3 h:bg-5 a:bg-10 a pl-28">
-          <span class="f-1">Drafts</span>
+        <div class="h-24 pr-8 px-8 fr ac radius-3 h:bg-5 a:bg-10 a pl-28">
+          <span class="f-1 b">Drafts</span>
         </div>
-        <div class="p-6 px-8 fr ac radius-3 h:bg-5 a:bg-10 a pl-28">
-          <span class="f-1">Scheduled</span>
+        <div class="h-24 pr-8 px-8 fr ac radius-3 h:bg-5 a:bg-10 a pl-28">
+          <span class="f-1 b">Scheduled</span>
         </div>
-        <div class="p-6 px-8 fr ac radius-3 h:bg-5 a:bg-10 a pl-28">
-          <span class="f-1">Published</span>
+        <div class="h-24 pr-8 px-8 fr ac radius-3 h:bg-5 a:bg-10 a pl-28">
+          <span class="f-1 b">Published</span>
         </div>
-        <div class="p-6 px-8 fr ac radius-3 h:bg-5 a:bg-10 a pl-28">
-          <span class="f-1">Free posts</span>
+        <div class="h-24 pr-8 px-8 fr ac radius-3 h:bg-5 a:bg-10 a pl-28">
+          <span class="f-1 b">Free posts</span>
           <span class="w-6 h-6 bg-red-80 radius-max"></span>
         </div>
-        <div class="p-6 px-8 fr ac radius-3 h:bg-5 a:bg-10 a pl-28">
-          <span class="f-1">Paid posts</span>
+        <div class="h-24 pr-8 px-8 fr ac radius-3 h:bg-5 a:bg-10 a pl-28">
+          <span class="f-1 b">Paid posts</span>
           <span class="w-6 h-6 bg-yellow-80 radius-max"></span>
         </div>
-        <div class="p-6 px-8 fr ac radius-3 h:bg-5 a:bg-10 a pl-28">
-          <span class="f-1">Newsletters</span>
+        <div class="h-24 pr-8 px-8 fr ac radius-3 h:bg-5 a:bg-10 a pl-28">
+          <span class="f-1 b">Newsletters</span>
           <span class="w-6 h-6 bg-green-80 radius-max"></span>
         </div>
         
-        <div class="p-6 pl-8 fr ac radius-3 h:bg-5 a:bg-10 a mt-12">
-          <i class="icon notranslate fs-1.2 o-80">import_contacts</i>
-          <span class="f-1 ml-8">Pages</span>
+        <div class="h-24 pr-8 pl-8 fr ac radius-3 h:bg-5 a:bg-10 a mt-12">
+          <i class="icon notranslate fs-1.2">import_contacts</i>
+          <span class="f-1 b ml-8">Pages</span>
         </div>
-        <div class="p-6 pl-8 fr ac radius-3 h:bg-5 a:bg-10 a">
-          <i class="icon notranslate fs-1.2 o-80">local_offer</i>
-          <span class="f-1 ml-8">Tags</span>
+        <div class="h-24 pr-8 pl-8 fr ac radius-3 h:bg-5 a:bg-10 a">
+          <i class="icon notranslate fs-1.2">local_offer</i>
+          <span class="f-1 b ml-8">Tags</span>
         </div>
-        <div class="p-6 pl-8 fr ac radius-3 h:bg-5 a:bg-10 a">
-          <i class="icon notranslate fs-1.2 o-80">people</i>
-          <span class="f-1 ml-8">Members</span>
-          <span class="dib bg-10 p-1 px-4 radius-max fs-0.9 c-60">3,862</span>
+        <div class="h-24 pr-8 pl-8 fr ac radius-3 h:bg-5 a:bg-10 a">
+          <i class="icon notranslate fs-1.2">people</i>
+          <span class="f-1 b ml-8">Members</span>
+          <span class="dib bg-10 p-4 b px-5 radius-max fs-0.9 c-60">3,862</span>
         </div>
-        <div class="p-6 pl-8 fr ac radius-3 h:bg-5 a:bg-10 a">
-          <i class="icon notranslate fs-1.2 o-80">inbox</i>
-          <span class="f-1 ml-8">Integrations</span>
+        <div class="h-24 pr-8 pl-8 fr ac radius-3 h:bg-5 a:bg-10 a">
+          <i class="icon notranslate fs-1.2">inbox</i>
+          <span class="f-1 b ml-8">Integrations</span>
         </div>
-        <div class="p-6 pl-8 fr ac radius-3 h:bg-5 a:bg-10 a">
-          <i class="icon notranslate fs-1.2 o-80">manage_accounts</i>
-          <span class="f-1 ml-8">Staff</span>
+        <div class="h-24 pr-8 pl-8 fr ac radius-3 h:bg-5 a:bg-10 a">
+          <i class="icon notranslate fs-1.2">manage_accounts</i>
+          <span class="f-1 b ml-8">Staff</span>
         </div>
         
-        <div class="p-6 pl-8 fr ac radius-3 h:bg-5 a:bg-10 a mt-12">
-          <i class="icon notranslate fs-1.2 o-80">local_cafe</i>
-          <span class="f-1 ml-8">Ghost Pro</span>
+        <div class="h-24 pr-8 pl-8 fr ac radius-3 h:bg-5 a:bg-10 a mt-12">
+          <i class="icon notranslate fs-1.2">local_cafe</i>
+          <span class="f-1 b ml-8">Ghost Pro</span>
         </div>
 
       </div>
@@ -153,7 +153,7 @@
 
 
     <div class="row cols-3 mt-15 gap-15 as">
-      <div class="col-2 md:col-3">
+      <div class="col-2 lg:col-3">
 
         <div class="bd bc-10 radius-3">
           <h2 class="px-12 py-7 b fs-1.2 bb bc-10">Start creating content</h2>
@@ -180,16 +180,16 @@
             <h2 class="b fs-1.2">Customise your site design</h2>
             <p class="mt-6 lh-1.4">Stand out from the crowd. ghost lets you customize everything so you can create a publication that doesn't just look the same as what everyone else has.</p>
             <div class="fr wrap mt-6">
-              <button class="bd bc-10 p-4 px-6 radius-3 mr-6 mt-6 h:c-blue h:bc-blue-20 h:bg-blue-10 ring-blue">Brand settings</button>
-              <button class="bd bc-10 p-4 px-6 radius-3 mr-6 mt-6 h:c-blue h:bc-blue-20 h:bg-blue-10 ring-blue">Email settings</button>
-              <button class="bd bc-10 p-4 px-6 radius-3 mr-6 mt-6 h:c-blue h:bc-blue-20 h:bg-blue-10 ring-blue">Your theme</button>
+              <button class="bd bc-10 p-4 px-6 radius-3 mr-6 mt-6 h:c-blue h:bc-blue-20 h:bg-blue-10 f:bc-blue-30 ring-blue">Brand settings</button>
+              <button class="bd bc-10 p-4 px-6 radius-3 mr-6 mt-6 h:c-blue h:bc-blue-20 h:bg-blue-10 f:bc-blue-30 ring-blue">Email settings</button>
+              <button class="bd bc-10 p-4 px-6 radius-3 mr-6 mt-6 h:c-blue h:bc-blue-20 h:bg-blue-10 f:bc-blue-30 ring-blue">Your theme</button>
             </div>
           </div>
           <div class="p-14 radius-3 bd bc-10">
             <h2 class="b fs-1.2">Looking for the help of ghost features?</h2>
             <p class="mt-6 lh-1.4">Stand out from the crowd. ghost lets you customize everything so you can create a publication that doesn't just look the same as what everyone else has.</p>
             <div class="fr wrap mt-6">
-              <a href="#" class="ifr ac bd bc-10 p-4 px-6 radius-3 mr-6 mt-6 h:c-blue h:bc-blue-20 h:bg-blue-10 ring-blue">
+              <a href="#" class="ifr ac bd bc-10 p-4 px-6 radius-3 mr-6 mt-6 h:c-blue h:bc-blue-20 h:bg-blue-10 f:bc-blue-30 ring-blue">
                 <span class="mr-2">Visite the help center</span>
                 <i class="icon notranslate fs-1.2 o-60">east</i>
               </a>
@@ -210,7 +210,7 @@
         </div>
       </div>
 
-      <div class="row md:col-3 cols-1 md:cols-2 sm:cols-1 gap-15">
+      <div class="row lg:col-3 cols-1 lg:cols-2 sm:cols-1 gap-15">
         <div class="p-12 bg-4 radius-3">
           <div class="pb-12 fr ac bb bc-10">
             <h2 class="f-1 fs-0.9 b">TOP MEMBERS</h2>
@@ -277,18 +277,10 @@
     var isDark = false
     var sw = function() {
       isDark = !isDark
-      document.querySelector('#style').setAttribute('href', isDark ? './dist/dark.css' : './dist/light.css')
+      document.querySelector('#style').setAttribute('href', isDark ? './css/dark.css' : './css/light.css')
       // document.scrollingElement.classList.toggle("dk")
     }
     document.querySelector('#switch').addEventListener('click', sw)
-
-
-    // document.querySelector('#dialog-btn').addEventListener('click', function() {
-    //   document.querySelector('#dialog').classList.remove('vh')
-    // })
-    // document.querySelector('#agree-btn').addEventListener('click', function() {
-    //   document.querySelector('#dialog').classList.add('vh')
-    // })
   </script>
 </body>
 </html>
