--- a/example.html
+++ b/example.html
@@ -210,7 +210,7 @@
         </div>
       </div>
 
-      <div class="row lg:col-3 cols-1 lg:cols-2 sm:cols-1 gap-15">
+      <div class="row lg:col-3 cols-1 lg:cols-2 xs:cols-1 gap-15">
         <div class="p-12 bg-4 radius-3">
           <div class="pb-12 fr ac bb bc-10">
             <h2 class="f-1 fs-0.9 b">TOP MEMBERS</h2>
